--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
 		<title>Library Login</title>
 		<meta charset="UTF-8">
 		<meta name="description" content="Book Reservation From Library">
-		<meta 
+		<meta name="keywords" content="HTML, CSS , PHP">
+		<meta name="author" content="Alex Bulgari">
+		<meta name="viewport" content="width=device-width, intial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 	</head>
 	
 	<body>
+		<header>
+			<h1>Welcome to our book reservation webpage</h1>
+		</header>
 		
+		<form action="PHP/action.php" method="post">
+			<div class="inputcontainer">
+				<label for="username">Username</label>
+				<input type="text" name="uname" id="uname">
+				
+				<label for="password">Password</label>
+				<input type="password" name="upass" id="upass">
+				
+				<
+			</div>
+		
+		
+		<footer>
+			<p>Posted by: Alexandru Bulgari </p>
+			<p>Image by Pexels from Pixabay</p>
+		</footer>
 	</body>
 </html>
