--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 	</head>
 	
 	<body>
-		<div style="background-image:url('Images/book.jpg');">
 		<header>
-			<h2 id="greeting">Welcome to our book reservation webpage</h2>
+			
+			<h3 id="greeting">Bookshop.ie</h3>
 		</header>
 		
 		<form id="inputform" action="PHP/action.php" method="post">
 			<br>
 			<div id="loginsection">
-				<h3>Login</h3>
+				<h3 class="formheading">Login</h3>
 				<label for="username">Username</label>
 				<input type="text" name="username" id="username">
 				
@@ -30,7 +30,7 @@
 			</div>
 			
 			<div id="createaccsection">
-				<h3>Create an Account</h3>
+				<h3 class="formheading">Create an Account</h3>
 				<label for="username">Username</label>
 				<input type="text" name="username" id="username">
 				
@@ -62,7 +62,7 @@
 			</div>
 		</form>
 		
-		<footer>
+		<footer id="footer">
 			Contact by phone : 0888-9999
 			<br>
 			Email : info@bookreservation.com
